--- a/about.html
+++ b/about.html
@@ -1,1 +1,13 @@
-about.html 
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width">
+    <title>About Page</title>
+
+</head>
+<body>
+    <h1>Welcome to about page</h1>
+    <p>This is learning git about page</p>
+</body>
+</html>
